updated code and added chromedriver

--- a/01_edmund-scraper.ipynb
+++ b/01_edmund-scraper.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "source": [
     "from selenium import webdriver\n",
     "import pandas as pd\n",
@@ -20,9 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "source": [
-    "webDriverLocation = '/Users/rchaks/Documents/GitHub/mis-2814n-analytics-for-unstructured-data/chromedriver'\n",
+    "webDriverLocation = 'utils/chromedriver'\n",
     "driver = webdriver.Chrome(executable_path = webDriverLocation)"
    ],
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "source": [
     "size = 10\n",
     "pages = (int)((size*1.1/50)+1) + 1\n",
@@ -45,12 +45,20 @@
     "\n",
     "comments = pd.DataFrame(columns = ['Date','user_id','comments']) "
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Pages to scrape: 2\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "source": [
     "for i in tqdm(range(1,pages)):\n",
     "    comment_url = \"https://forums.edmunds.com/discussion/2864/general/x/entry-level-luxury-performance-sedans/p{}\".format(i)\n",
@@ -74,12 +82,20 @@
     "        comments.loc[len(comments)] = [date,userid,comment]\n",
     "        "
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "100%|██████████| 1/1 [00:09<00:00,  9.41s/it]\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "source": [
     "driver.close()\n",
     "comments.dropna(inplace=True)\n",
@@ -87,7 +103,136 @@
     "print(comments.shape)\n",
     "comments"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(10, 3)\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>comments</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>March 24, 2002 10:54PM</td>\n",
+       "      <td>merc1</td>\n",
+       "      <td>I personally think that with a few tweaks the ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>March 25, 2002 12:06AM</td>\n",
+       "      <td>fredvh</td>\n",
+       "      <td>I am debating a new purchase and these two are...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>March 25, 2002 10:02AM</td>\n",
+       "      <td>blueguydotcom</td>\n",
+       "      <td>Great handling, RWD, excellent engine and the ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>March 25, 2002 4:04PM</td>\n",
+       "      <td>hungrywhale</td>\n",
+       "      <td>And no manual tranny. That may not matter to y...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>March 25, 2002 5:44PM</td>\n",
+       "      <td>riez</td>\n",
+       "      <td>One beauty of BMW 3 Series is that there are s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>March 26, 2002 1:20PM</td>\n",
+       "      <td>blueguydotcom</td>\n",
+       "      <td>good grief, so you wait 9 months for the manua...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>March 26, 2002 2:02PM</td>\n",
+       "      <td>hungrywhale</td>\n",
+       "      <td>I'll give it a fair shot when the manual comes...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>March 26, 2002 2:45PM</td>\n",
+       "      <td>blueguydotcom</td>\n",
+       "      <td>I understand it's not about the speed. I reall...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>March 26, 2002 5:00PM</td>\n",
+       "      <td>hungrywhale</td>\n",
+       "      <td>It sounds like you know why I won't even put i...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>March 26, 2002 7:00PM</td>\n",
+       "      <td>riez</td>\n",
+       "      <td>Is there such a thing as an automatic-only tru...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Date        user_id  \\\n",
+       "0  March 24, 2002 10:54PM          merc1   \n",
+       "1  March 25, 2002 12:06AM         fredvh   \n",
+       "2  March 25, 2002 10:02AM  blueguydotcom   \n",
+       "3   March 25, 2002 4:04PM    hungrywhale   \n",
+       "4   March 25, 2002 5:44PM           riez   \n",
+       "5   March 26, 2002 1:20PM  blueguydotcom   \n",
+       "6   March 26, 2002 2:02PM    hungrywhale   \n",
+       "7   March 26, 2002 2:45PM  blueguydotcom   \n",
+       "8   March 26, 2002 5:00PM    hungrywhale   \n",
+       "9   March 26, 2002 7:00PM           riez   \n",
+       "\n",
+       "                                            comments  \n",
+       "0  I personally think that with a few tweaks the ...  \n",
+       "1  I am debating a new purchase and these two are...  \n",
+       "2  Great handling, RWD, excellent engine and the ...  \n",
+       "3  And no manual tranny. That may not matter to y...  \n",
+       "4  One beauty of BMW 3 Series is that there are s...  \n",
+       "5  good grief, so you wait 9 months for the manua...  \n",
+       "6  I'll give it a fair shot when the manual comes...  \n",
+       "7  I understand it's not about the speed. I reall...  \n",
+       "8  It sounds like you know why I won't even put i...  \n",
+       "9  Is there such a thing as an automatic-only tru...  "
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
    "metadata": {}
   },
   {
