--- a/01_edmund-scraper.ipynb
+++ b/01_edmund-scraper.ipynb
@@ -239,7 +239,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "comments.to_csv(\"./output/edmunds_comments_{a}.csv\".format(a = size))"
+    "comments.to_csv(\"./output/comments_{a}.csv\".format(a = size))"
    ],
    "outputs": [],
    "metadata": {}
