--- a/01_edmund-scraper.ipynb
+++ b/01_edmund-scraper.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "source": [
     "from selenium import webdriver\n",
     "import pandas as pd\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "source": [
     "webDriverLocation = 'utils/chromedriver'\n",
     "driver = webdriver.Chrome(executable_path = webDriverLocation)"
@@ -54,6 +54,44 @@
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "for i in tqdm(range(1,pages)):\n",
+    "    comment_url = \"https://forums.edmunds.com/discussion/2864/general/x/entry-level-luxury-performance-sedans/p{}\".format(i)\n",
+    "    driver.get(comment_url)\n",
+    "    ids = driver.find_elements_by_xpath(\"//*[contains(@id,'Comment_')]\")\n",
+    "    for j in ids:\n",
+    "        x = j.get_attribute('id')\n",
+    "        #Extract dates from for each user on a page\n",
+    "        user_date = driver.find_elements_by_xpath('//*[@id=\"' + x +'\"]/div/div[2]/div[2]/span[1]/a/time')[0]\n",
+    "        date = user_date.get_attribute('title')\n",
+    "\n",
+    "        #Extract user ids from each user on a page\n",
+    "        userid_element = driver.find_elements_by_xpath('//*[@id=\"' + x +'\"]/div/div[2]/div[1]/span[1]/a[2]')[0]\n",
+    "        userid = userid_element.text\n",
+    "\n",
+    "        #Extract Message for each user on a page\n",
+    "        user_message = driver.find_elements_by_xpath('//*[@id=\"' + x +'\"]/div/div[3]/div/div[1]')[0]\n",
+    "        comment = user_message.text\n",
+    "        # print(\"Comment:\\n\",comment)\n",
+    "\n",
+    "        # Check if message is a reply; omit reply\n",
+    "        try:\n",
+    "            message_reply = driver.find_elements_by_xpath('//*[@id=\"' + x +'\"]/div/div[3]/div/div[1]/blockquote')[0]\n",
+    "            reply = message_reply.text\n",
+    "            comment = comment.replace(reply,\"\")\n",
+    "        except:\n",
+    "            ;\n",
+    "        \n",
+    "        #Adding date, userid and comment for each user in a dataframe    \n",
+    "        comments.loc[len(comments)] = [date,userid,comment]\n",
+    "        "
+   ],
+   "outputs": [],
    "metadata": {}
   },
   {
