--- a/Assignment 1 Edmunds Forum Scrape and Analysis.ipynb
+++ b/Assignment 1 Edmunds Forum Scrape and Analysis.ipynb
@@ -44,7 +44,7 @@
         "**Group Members:** <br>\n",
         "\n",
         "- Shreya Bhootda (sb58653)<br>\n",
-        "- Rohitashwas Chakraborty (rc47878) <br>\n",
+        "- Rohitashwa Chakraborty (rc47878) <br>\n",
         "- Sukeerth Cheruvu (sc63232) <br>\n",
         "- Dipali Pandey (dp33957) <br>\n",
         "- Sahitya Sundar Raj Vijayanagar (sv25849) <br>\n",
