--- a/Assignment 1 Edmunds Forum Scrape and Analysis.ipynb
+++ b/Assignment 1 Edmunds Forum Scrape and Analysis.ipynb
@@ -305,10 +305,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 414
+          "height": 438
         },
         "id": "SVE_b_T3o2TI",
-        "outputId": "7053d825-8b4d-42c0-f936-7cf411680726"
+        "outputId": "ced5c595-99e5-4a91-fde8-76a5ebf5d452"
       },
       "source": [
         "driver.close()\n",
@@ -320,21 +320,121 @@
         "print(comments.shape)\n",
         "comments"
       ],
-      "execution_count": 41,
+      "execution_count": 103,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "InvalidSessionIdException",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mInvalidSessionIdException\u001b[0m                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-41-c4d7986ca72e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mcomments\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcomments_5000\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mcomments\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcomments\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcomments\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'comments'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m!=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreset_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mcomments\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"comments\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcomments\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"comments\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcomments\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcomments\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/selenium/webdriver/remote/webdriver.py\u001b[0m in \u001b[0;36mclose\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    686\u001b[0m             \u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    687\u001b[0m         \"\"\"\n\u001b[0;32m--> 688\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCommand\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCLOSE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    689\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    690\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mquit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/selenium/webdriver/remote/webdriver.py\u001b[0m in \u001b[0;36mexecute\u001b[0;34m(self, driver_command, params)\u001b[0m\n\u001b[1;32m    319\u001b[0m         \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommand_executor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdriver_command\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    320\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 321\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merror_handler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcheck_response\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    322\u001b[0m             response['value'] = self._unwrap_value(\n\u001b[1;32m    323\u001b[0m                 response.get('value', None))\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/selenium/webdriver/remote/errorhandler.py\u001b[0m in \u001b[0;36mcheck_response\u001b[0;34m(self, response)\u001b[0m\n\u001b[1;32m    240\u001b[0m                 \u001b[0malert_text\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'alert'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'text'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    241\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malert_text\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 242\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    243\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    244\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_value_or_default\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdefault\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mInvalidSessionIdException\u001b[0m: Message: invalid session id\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(5000, 2)\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Date</th>\n",
+              "      <th>comments</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>February 25, 2020 12:38PM</td>\n",
+              "      <td>and, that's on top of any discount you negotia...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>February 25, 2020 12:41PM</td>\n",
+              "      <td>add $350 to any lease on a kia if you are not ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>February 25, 2020 12:44PM</td>\n",
+              "      <td>did you hear about the key fob scam the dealer...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>February 25, 2020 12:47PM</td>\n",
+              "      <td>that's a jaw-dropping lease incentive. amazing...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>February 25, 2020 12:50PM</td>\n",
+              "      <td>i'm pretty sure that's the case with any capti...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4995</th>\n",
+              "      <td>March 18, 2014 6:48PM</td>\n",
+              "      <td>wow these message boards are dormant -</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4996</th>\n",
+              "      <td>March 18, 2014 8:03PM</td>\n",
+              "      <td>we're all out driving or test-driving.</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4997</th>\n",
+              "      <td>March 23, 2014 6:47PM</td>\n",
+              "      <td>i guess or format still not taking hold-\\n\\nfo...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4998</th>\n",
+              "      <td>March 23, 2014 6:47PM</td>\n",
+              "      <td>pix</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4999</th>\n",
+              "      <td>March 23, 2014 8:16PM</td>\n",
+              "      <td>@sweendogy\\ni see you hate your state's front ...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>5000 rows × 2 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                           Date                                           comments\n",
+              "0     February 25, 2020 12:38PM  and, that's on top of any discount you negotia...\n",
+              "1     February 25, 2020 12:41PM  add $350 to any lease on a kia if you are not ...\n",
+              "2     February 25, 2020 12:44PM  did you hear about the key fob scam the dealer...\n",
+              "3     February 25, 2020 12:47PM  that's a jaw-dropping lease incentive. amazing...\n",
+              "4     February 25, 2020 12:50PM  i'm pretty sure that's the case with any capti...\n",
+              "...                         ...                                                ...\n",
+              "4995      March 18, 2014 6:48PM             wow these message boards are dormant -\n",
+              "4996      March 18, 2014 8:03PM             we're all out driving or test-driving.\n",
+              "4997      March 23, 2014 6:47PM  i guess or format still not taking hold-\\n\\nfo...\n",
+              "4998      March 23, 2014 6:47PM                                                pix\n",
+              "4999      March 23, 2014 8:16PM  @sweendogy\\ni see you hate your state's front ...\n",
+              "\n",
+              "[5000 rows x 2 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 103
         }
       ]
     },
@@ -346,7 +446,7 @@
       "source": [
         "comments.to_csv(\"comments_{a}.csv\".format(a = size))"
       ],
-      "execution_count": 42,
+      "execution_count": 104,
       "outputs": []
     },
     {
@@ -373,14 +473,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "ff6335e4-bd05-4bac-beb7-31e59f949821"
+        "outputId": "b7256ab2-f73a-4743-dbe0-0345f04f64f8"
       },
       "source": [
         "df = pd.read_csv('comments_5000.csv')\n",
         "df['comments'] = df['comments'].astype('string')\n",
         "df.head(5)"
       ],
-      "execution_count": 43,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -405,9 +505,7 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>Unnamed: 0</th>\n",
-              "      <th>index</th>\n",
               "      <th>Date</th>\n",
-              "      <th>user_id</th>\n",
               "      <th>comments</th>\n",
               "    </tr>\n",
               "  </thead>\n",
@@ -415,41 +513,31 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>0</td>\n",
-              "      <td>0</td>\n",
               "      <td>February 25, 2020 12:38PM</td>\n",
-              "      <td>Michaell</td>\n",
               "      <td>and, that's on top of any discount you negotia...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>1</td>\n",
-              "      <td>1</td>\n",
               "      <td>February 25, 2020 12:41PM</td>\n",
-              "      <td>andres3</td>\n",
               "      <td>add $350 to any lease on a kia if you are not ...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>2</td>\n",
-              "      <td>2</td>\n",
               "      <td>February 25, 2020 12:44PM</td>\n",
-              "      <td>andres3</td>\n",
               "      <td>did you hear about the key fob scam the dealer...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>3</td>\n",
-              "      <td>3</td>\n",
               "      <td>February 25, 2020 12:47PM</td>\n",
-              "      <td>tjc78</td>\n",
               "      <td>that's a jaw-dropping lease incentive. amazing...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>4</td>\n",
-              "      <td>4</td>\n",
               "      <td>February 25, 2020 12:50PM</td>\n",
-              "      <td>Michaell</td>\n",
               "      <td>i'm pretty sure that's the case with any capti...</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -464,11 +552,11 @@
               "3           3  ...  that's a jaw-dropping lease incentive. amazing...\n",
               "4           4  ...  i'm pretty sure that's the case with any capti...\n",
               "\n",
-              "[5 rows x 5 columns]"
+              "[5 rows x 3 columns]"
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 105
         }
       ]
     },
