--- a/Assignment 1 Edmunds Forum Scrape and Analysis.ipynb
+++ b/Assignment 1 Edmunds Forum Scrape and Analysis.ipynb
@@ -444,9 +444,9 @@
         "id": "juttpjMC2fgY"
       },
       "source": [
-        "comments.to_csv(\"comments_{a}.csv\".format(a = size))"
+        "comments.to_csv(\"comments_{a}.csv\".format(a = size), index = False)"
       ],
-      "execution_count": 104,
+      "execution_count": 106,
       "outputs": []
     },
     {
@@ -473,14 +473,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "b7256ab2-f73a-4743-dbe0-0345f04f64f8"
+        "outputId": "c2af7f3f-2415-4a65-e86f-397be36e9c8f"
       },
       "source": [
         "df = pd.read_csv('comments_5000.csv')\n",
         "df['comments'] = df['comments'].astype('string')\n",
         "df.head(5)"
       ],
-      "execution_count": 105,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -504,7 +504,6 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>Unnamed: 0</th>\n",
               "      <th>Date</th>\n",
               "      <th>comments</th>\n",
               "    </tr>\n",
@@ -512,31 +511,26 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>0</td>\n",
               "      <td>February 25, 2020 12:38PM</td>\n",
               "      <td>and, that's on top of any discount you negotia...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>1</td>\n",
               "      <td>February 25, 2020 12:41PM</td>\n",
               "      <td>add $350 to any lease on a kia if you are not ...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>2</td>\n",
               "      <td>February 25, 2020 12:44PM</td>\n",
               "      <td>did you hear about the key fob scam the dealer...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>3</td>\n",
               "      <td>February 25, 2020 12:47PM</td>\n",
               "      <td>that's a jaw-dropping lease incentive. amazing...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>4</td>\n",
               "      <td>February 25, 2020 12:50PM</td>\n",
               "      <td>i'm pretty sure that's the case with any capti...</td>\n",
               "    </tr>\n",
@@ -545,18 +539,16 @@
               "</div>"
             ],
             "text/plain": [
-              "   Unnamed: 0  ...                                           comments\n",
-              "0           0  ...  and, that's on top of any discount you negotia...\n",
-              "1           1  ...  add $350 to any lease on a kia if you are not ...\n",
-              "2           2  ...  did you hear about the key fob scam the dealer...\n",
-              "3           3  ...  that's a jaw-dropping lease incentive. amazing...\n",
-              "4           4  ...  i'm pretty sure that's the case with any capti...\n",
-              "\n",
-              "[5 rows x 3 columns]"
+              "                        Date                                           comments\n",
+              "0  February 25, 2020 12:38PM  and, that's on top of any discount you negotia...\n",
+              "1  February 25, 2020 12:41PM  add $350 to any lease on a kia if you are not ...\n",
+              "2  February 25, 2020 12:44PM  did you hear about the key fob scam the dealer...\n",
+              "3  February 25, 2020 12:47PM  that's a jaw-dropping lease incentive. amazing...\n",
+              "4  February 25, 2020 12:50PM  i'm pretty sure that's the case with any capti..."
             ]
           },
           "metadata": {},
-          "execution_count": 105
+          "execution_count": 107
         }
       ]
     },
@@ -567,20 +559,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IkcV4ZOF9C22",
-        "outputId": "c9960635-b535-4953-e848-055cc69e20b9"
+        "outputId": "3f069bf3-b010-477a-fed0-469b02431028"
       },
       "source": [
         "import nltk\n",
         "nltk.download('punkt')"
       ],
-      "execution_count": 10,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+            "[nltk_data]   Package punkt is already up-to-date!\n"
           ]
         },
         {
@@ -591,7 +583,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 108
         }
       ]
     },
@@ -603,14 +595,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "6274fb41-6dcf-4e3d-f075-7243df8a85c3"
+        "outputId": "f898d494-c19d-471f-d588-0340526a3918"
       },
       "source": [
         "df['comments'] = df['comments'].astype('string')\n",
         "df['Tokens'] = df['comments'].apply(nltk.tokenize.word_tokenize)\n",
         "df.head(5)"
       ],
-      "execution_count": 11,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -634,10 +626,7 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>Unnamed: 0</th>\n",
-              "      <th>index</th>\n",
               "      <th>Date</th>\n",
-              "      <th>user_id</th>\n",
               "      <th>comments</th>\n",
               "      <th>Tokens</th>\n",
               "    </tr>\n",
@@ -645,46 +634,31 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
               "      <td>February 25, 2020 12:38PM</td>\n",
-              "      <td>Michaell</td>\n",
               "      <td>and, that's on top of any discount you negotia...</td>\n",
               "      <td>[and, ,, that, 's, on, top, of, any, discount,...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
               "      <td>February 25, 2020 12:41PM</td>\n",
-              "      <td>andres3</td>\n",
               "      <td>add $350 to any lease on a kia if you are not ...</td>\n",
               "      <td>[add, $, 350, to, any, lease, on, a, kia, if, ...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>2</td>\n",
-              "      <td>2</td>\n",
               "      <td>February 25, 2020 12:44PM</td>\n",
-              "      <td>andres3</td>\n",
               "      <td>did you hear about the key fob scam the dealer...</td>\n",
               "      <td>[did, you, hear, about, the, key, fob, scam, t...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>3</td>\n",
-              "      <td>3</td>\n",
               "      <td>February 25, 2020 12:47PM</td>\n",
-              "      <td>tjc78</td>\n",
               "      <td>that's a jaw-dropping lease incentive. amazing...</td>\n",
               "      <td>[that, 's, a, jaw-dropping, lease, incentive, ...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>4</td>\n",
-              "      <td>4</td>\n",
               "      <td>February 25, 2020 12:50PM</td>\n",
-              "      <td>Michaell</td>\n",
               "      <td>i'm pretty sure that's the case with any capti...</td>\n",
               "      <td>[i, 'm, pretty, sure, that, 's, the, case, wit...</td>\n",
               "    </tr>\n",
@@ -693,18 +667,18 @@
               "</div>"
             ],
             "text/plain": [
-              "   Unnamed: 0  ...                                             Tokens\n",
-              "0           0  ...  [and, ,, that, 's, on, top, of, any, discount,...\n",
-              "1           1  ...  [add, $, 350, to, any, lease, on, a, kia, if, ...\n",
-              "2           2  ...  [did, you, hear, about, the, key, fob, scam, t...\n",
-              "3           3  ...  [that, 's, a, jaw-dropping, lease, incentive, ...\n",
-              "4           4  ...  [i, 'm, pretty, sure, that, 's, the, case, wit...\n",
+              "                        Date  ...                                             Tokens\n",
+              "0  February 25, 2020 12:38PM  ...  [and, ,, that, 's, on, top, of, any, discount,...\n",
+              "1  February 25, 2020 12:41PM  ...  [add, $, 350, to, any, lease, on, a, kia, if, ...\n",
+              "2  February 25, 2020 12:44PM  ...  [did, you, hear, about, the, key, fob, scam, t...\n",
+              "3  February 25, 2020 12:47PM  ...  [that, 's, a, jaw-dropping, lease, incentive, ...\n",
+              "4  February 25, 2020 12:50PM  ...  [i, 'm, pretty, sure, that, 's, the, case, wit...\n",
               "\n",
-              "[5 rows x 6 columns]"
+              "[5 rows x 3 columns]"
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 109
         }
       ]
     },
