--- a/Assignment 1 Edmunds Forum Scrape and Analysis.ipynb
+++ b/Assignment 1 Edmunds Forum Scrape and Analysis.ipynb
@@ -2710,6 +2710,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "D41JU36QwNZF"
+      },
+      "source": [
+        "## Most Aspirational Brands"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "1dab1hp85KfW",
@@ -2822,6 +2831,8 @@
         "id": "tXc5g6XTHLX0"
       },
       "source": [
+        "## Insights\n",
+        "\n",
         "- The most aspirational brand as per latest 5000 comments on Edmunds appears to be Chevrolet followed by Mercedes, Toyota, Audi and then Cadillac. Various combinations of bigrams were used for this analysis and lift values of the brand names were calculated against these bigrams. \n",
         "\n",
         "\n",
